--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,11 +20,11 @@
     <div class="row">
       <div class="col-6">
         <h1 class="title">Put your prospecting and outreach on autopilot.</h1>
-        <p>Prospecting clients on your own is time-consuming and often leads to disappointing results.</p>
+        <p>Prospecting clients on your own are time-consuming and often leads to disappointing results.</p>
         <p>Lead Hound ensures that you receive quality leads every month — enabling you to build and grow your business.</p>
 
         <a class="button" href="javascript:void(0)" data-cb-type="checkout" data-cb-plan-id="light-plan,-monthly" >Hire a sales team — $395 / month</a>
-        <small>Interested to hear more before making a comitment? <a href="">Find out more here.</a></small>
+        <small>Interested to hear more before making a commitment? <a href="">Find out more here.</a></small>
       </div>
 
 
@@ -43,7 +43,7 @@
         <div class="col-10 left">
           <h1>Lead generating threadmill</h1>
           <p>We engage in highly personalized email conversations with your ideal customers and once they respond with interest,
-            you simply picks up the conversation with them and work on closing the deal.</p>
+            you simply pick up the conversation with them and work on closing the deal.</p>
           <hr/>
         </div>
       </div>
