--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,7 +20,7 @@
     <div class="row">
       <div class="col-6">
         <h1 class="title">Put your prospecting and outreach on autopilot.</h1>
-        <p>Prospecting clients on your own are time-consuming and often leads to disappointing results.</p>
+        <p>Prospecting clients on your own is time-consuming and often leads to disappointing results.</p>
         <p>Lead Hound ensures that you receive quality leads every month — enabling you to build and grow your business.</p>
 
         <a class="button" href="javascript:void(0)" data-cb-type="checkout" data-cb-plan-id="light-plan,-monthly" >Hire a sales team — $395 / month</a>
